[gd_scene load_steps=7 format=3 uid="uid://b8kqhvcfq5rly"]

[ext_resource type="Script" path="res://scripts/Grid.gd" id="1_m4n2p"]
[ext_resource type="Script" path="res://scripts/GameCamera.gd" id="2_k8m2l"]
[ext_resource type="PackedScene" path="res://scenes/Flag.tscn" id="3_n4r5e"]
[ext_resource type="Script" path="res://scripts/WaveManager.gd" id="4_p6s7t"]
[ext_resource type="Script" path="res://scripts/TestMap.gd" id="5_q8u9v"]
[ext_resource type="PackedScene" uid="uid://c4q8h6g7y3dlv" path="res://scenes/Enemy.tscn" id="6_r7s8w"]

[node name="TestMap" type="Node2D"]
script = ExtResource("5_q8u9v")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("1_m4n2p")

[node name="Flag" parent="." instance=ExtResource("3_n4r5e")]
position = Vector2(1920, 540)

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("4_p6s7t")
enemy_scene = ExtResource("6_r7s8w")

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("2_k8m2l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="Panel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 1

[node name="GoldLabel" type="Label" parent="CanvasLayer/UI/TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -13.0
offset_right = 200.0
offset_bottom = 13.0
grow_vertical = 2
text = "Gold: 100"
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="CanvasLayer/UI/TopBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -13.0
offset_right = 90.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Wave: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartWaveButton" type="Button" parent="CanvasLayer/UI/TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
text = "Start Wave"

[node name="TowerPanel" type="Panel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/TowerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -30.0
offset_right = 180.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BallistaButton" type="Button" parent="CanvasLayer/UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Ballista
50g"

[node name="FlamethrowerButton" type="Button" parent="CanvasLayer/UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Flamethrower
75g"

[node name="ArcaneButton" type="Button" parent="CanvasLayer/UI/TowerPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Arcane
100g"
